infrastructure/istio/traffic/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  # HTTP port cho ACME challenge
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app.nguyenth4nh.id.vn"
    - "api.nguyenth4nh.id.vn"
    - "id.nguyenth4nh.id.vn"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: multi-tls
    hosts:
    - "app.nguyenth4nh.id.vn"
    - "api.nguyenth4nh.id.vn"
    - "id.nguyenth4nh.id.vn"
