infrastructure/istio/traffic/auction-routing.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: auction-svc-dr
  namespace: backend
spec:
  host: auction-clusterip.backend.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        idleTimeout: 2m
      http:

        idleTimeout: 2m
        maxRequestsPerConnection: 100

    tls:
      mode: ISTIO_MUTUAL
