infrastructure/istio/traffic/destinationRule.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: webapp-dr
spec:
  host: webapp-clusterip.frontend.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: ISTIO_MUTUAL
---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gateway-dr
spec:
  host: gateway-clusterip.backend.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: ISTIO_MUTUAL
---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: identity-dr
spec:
  host: identity-clusterip.backend.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: ISTIO_MUTUAL
