infrastructure/istio/traffic/gateway-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-vs
  namespace: backend
spec:
  hosts:
    - api.nguyenth4nh.id.vn
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: "/auctions"
      route:
        - destination:
            host: gateway-clusterip.backend.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            prefix: "/search/auctions"
      route:
        - destination:
            host: gateway-clusterip.backend.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            prefix: "/search/products"
      route:
        - destination:
            host: gateway-clusterip.backend.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            prefix: "/users"
      route:
        - destination:
            host: gateway-clusterip.backend.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            prefix: "/orders"
      route:
        - destination:
            host: gateway-clusterip.backend.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            prefix: "/notifications"
      route:
        - destination:
            host: notify-clusterip.backend.svc.cluster.local
            port:
              number: 80
    - route:
        - destination:
            host: gateway-clusterip.backend.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gateway-dr
  namespace: backend
spec:
  host: gateway-clusterip.backend.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: ISTIO_MUTUAL
