infrastructure/istio/traffic/identity-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: identity-vs
  namespace: backend
spec:
  hosts:
    - id.nguyenth4nh.id.vn
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: identity-clusterip.backend.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: identity-dr
  namespace: backend
spec:
  host: identity-clusterip.backend.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

    loadBalancer:
      simple: ROUND_ROBIN
