infrastructure/istio/traffic/mongo-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mongo
  namespace: backend
spec:
  host: mongo-clusterip.backend.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mongo-mtls-permissive
  namespace: backend
spec:
  selector:
    matchLabels:
      app: mongo
  mtls:
    mode: PERMISSIVE
